# kairos-trie

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Readme.md  flake.nix  rust-toolchain.toml
.github/workflows/: rust.yml
benches/: against_snapshot.rs
docs/: kairos-trie.xmind
docs/mindmap/: kairos-trie.xmind
examples/: example.rs  prove-and-verify.rs
nix/: crates.nix  format.nix  shells.nix
src/: errors.rs  hash.rs  lib.rs  modified.rs  stored.rs  transaction.rs
src/stored/: memory_db.rs  merkle.rs
src/transaction/: nodes.rs
tests/: build_store_entry_ops.proptest-regressions  build_store_entry_ops.rs  build_store_modify.rs  modified_only.rs
tests/utils/: insert_get.rs  mod.rs  operations.rs
