[package]
name = "kairos-trie"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["std", "proptest"]
std = []
proptest = ["dep:proptest", "dep:proptest-derive"]


[profile.test]
opt-level = 3
debug-assertions = true
overflow-checks = true


[dependencies]
sha2 = "0.10"
bumpalo = "3"
ouroboros = "0.18"

proptest-derive = { version = "0.4", optional = true }
proptest = { version = "1", optional = true }

[dev-dependencies]
